@@ -2,6 +2,8 @@
 2018-03-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c: added Tiny C version info
+	* termio.c: renamed (clean_nan) to (clean_double) and let it
+	  remove the leading zero from the exponent
 
 2017-03-08  Ron Norman <rjn@inglenet.com>
 
